--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -2,13 +2,16 @@
 <ul>
   <li *ngFor="let member of crew">
     <span *ngIf="memberBeingEdited !== member; else elseBlock">
-      <span (click)="edit(member)" class="editable-text">
-        {{ member.name }} </span
-      ><span *ngIf="member.firstMission"> - 1st</span
-      ><button (click)="remove(member)">remove</button></span
-    >
+      <!-- display state of member -->
+      <span (click)="edit(member)" class="editable-text">{{
+        member.name
+      }}</span>
+      <span *ngIf="member.firstMission"> - 1st </span>
+      <button (click)="remove(member)">remove</button>
+    </span>
 
     <ng-template #elseBlock>
+      <!-- edit state of member -->
       <input
         #updatedName
         (keyup.enter)="save(updatedName.value, member)"
@@ -19,5 +22,5 @@
   </li>
 </ul>
 <input #name type="text" />
-<label>First mission:<input #firstMission type="checkbox" /></label>
-<button (click)="addToCrew(name.value, firstMission.checked)">add</button>
+<label>First mission<input #firstMission type="checkbox" /></label>
+<button (click)="add(name.value, firstMission.checked)">Add</button>
