--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,7 +1,21 @@
 <h3>Equipment</h3>
 <ul>
-  <li>Habitat dome</li>
-  <li>Drones</li>
-  <li>Food containers</li>
-  <li>Oxygen tanks</li>
+  <li *ngFor="let item of equipment">
+    <span *ngIf="itemBeingEdited !== item; else elseBlock">
+      <span (click)="editEquipment(item)" class="editable-text">
+        {{ item }}</span
+      ><button (click)="removeEquipment(item)">remove</button></span
+    >
+    <ng-template #elseBlock>
+      <input
+        #updatedName
+        (keyup.enter)="save(updatedName.value, item)"
+        type="text"
+        value="{{ item }}"
+      />
+      <button (click)="save(updatedName.value, item)">save</button>
+    </ng-template>
+  </li>
 </ul>
+<input #newName type="text" />
+<button (click)="addEquipment(newName.value)">Add</button>
